quelea (2016.1) stable; urgency=normal
 
  * Fix "c" selecting pre-chorus
  * Add missing labels
  * Fix recording level bar
  * Add song select import options for copyright & key
  * Fix keyboard shortcuts for presentations
  * Fix record button behaviour when no recording device is found
  * New options dialog layout
  * Add support for controlling recordings through the apps
  * Add support for jumping to a schedule item from the apps
  * Fix remote control play/pause functionality for timers
  * Fix Mac recording conversions


 -- Michael Berry <michael@quelea.org>  Wednesday, 14 January 2016 00:00:00 +0000