@@ -11,6 +11,7 @@ quelea (2016.1) stable; urgency=normal
   * Add support for jumping to a schedule item from the apps
   * Fix remote control play/pause functionality for timers
   * Fix Mac recording conversions
+  * Add CCLI number to SongSelectParser
 
 
  -- Michael Berry <michael@quelea.org>  Wednesday, 14 January 2016 00:00:00 +0000
